# registro

./: .ee432f33493a26d92a179ba5df483bdc6b8aa047-ssh-auth.sock  .gitignore  .pre-commit-config.yaml  .replit  CHANGELOG.md  DEVELOPMENT.md  LICENSE  Makefile  README.md  WORKFLOW.md  bookshop.db  bookshop_alt.db  inventory.db  mini_test.py  output.txt  pyproject.toml  replit.nix  test_auto_create_resource.py  test_decorator_non_table.py  test_decorator_tablename.py  test_decorator_tablename_validation.py  test_output.txt  test_resource_identity.py  test_resourcetypebasemodel.py  test_script.py
.github/: release-drafter.yml
.github/workflows/: ci.yml  codecov.yml  publish.yml  release-drafter.yml  semantic-release.yml
.specstory/history/: 2025-03-20_00-41-transforming-code-into-open-source-library.md  2025-03-20_01-30-configuring-service-in-custom-resource.md  2025-03-20_20-44-model-renaming-and-codebase-update.md
attached_assets/: Pasted--Task-1-Refactor-ConstrainedStr-Base-Class-File-registro-models-rid-py--1744916664966.txt  Pasted--Task-3-Refactor-InstanceStr-File-registro-models-rid-py-Why-Similar-to--1744917370541.txt  Pasted--Task-5-Refactor-LocatorStr-File-registro-models-rid-py-Why-Remove-h-1744917398587.txt  Pasted-Okay-here-is-the-detailed-breakdown-of-tasks-and-the-exact-code-modifications-needed-for-registro--1744916628686.txt  Pasted-Okay-let-s-outline-a-clear-development-strategy-and-detailed-instructions-for-modifying-the-regist-1744915456125.txt  Pasted-Okay-let-s-review-the-entire-registro-codebase-provided-focusing-on-whether-the-6-tasks-identifi-1745073906684.txt  Pasted-Phase-3-Update-registro-models-rid-Where-registro-models-rid-py-Why-To-make-RID-component-validat-1744915599597.txt
examples/: README.md  alternative_basic_usage.py  basic_usage.py  custom_resource.py  identity_registry_example.py  integration_example.py  workflow_example.py
registro/: __init__.py  decorators.py  pyproject.toml  resource.py  resource_based.py
registro/config/: __init__.py  settings.py
registro/core/: __init__.py  domain.py  global_registry.py  identity.py  mixins.py  registry.py  resource.py  resource_base.py  schema.py  simple_resource_base.py  temporal.py
registro/domains/: __init__.py  user.py
registro/examples/: README.md  __init__.py  alternative_basic_usage.py  basic_usage.py  bookshop.db  custom_resource.py  integration_example.py  inventory.db  tasks.db
registro/models/: __init__.py  auto_nested.py  database.py  patterns.py  rid.py
registro/utils/: metrics.py
test_results/: enhanced_features_test.txt  standalone_test.txt
tests/: conftest.py  test_auto_create_resource.py  test_decorator_validators.py  test_domain_resource.py  test_identity_registry.py  test_native_instantiation.py  test_registro_decorator_smoke.py  test_registro_imports.py  test_scd2_schema.py
tests/core/: test_global_registry.py  test_resource_base.py
tests/decorators/: test_decorators.py
tests/unit/: test_metrics.py  test_patterns.py  test_rid.py  test_rid_extra.py  test_rid_methods.py  test_settings.py  test_settings_env.py  test_utils.py
